# insvert_demo

./: .README.md.swp  .gitignore  README.md  TRA.vcf  config.yaml  debug_pysam.py  demo.md  pyproject.toml  simulated.vcf  streaming_approach_benchmark.txt  traslocations_details_implementation.txt  vcf_notes.md
img/: inSVert.drawio  simulate.drawio
inSVert/: VariantObjects.py  cli.py  config.yaml  insert.py  insert_streaming.py  simulate.py  simulator.py  test_distributions.ipynb  test_distributions.py  utils.py  utils2.py  utils_ins.py  utils_ins_streaming.py  utils_sim.py  vcf_parser.py  vcfbuilder.py  vcfparser.py
inSVert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inSVert/inSVert.egg-info/: SOURCES.txt
inSVert/tests/: input_files_tests.py
scripts/: cutesv.sh  gen_verygoodreads.sh  minimap2.sh  simulation_to_evaluation.sh  sniffles.sh  variant_calculator.sh  varstats.R
test-viz/: gigatest-tra-agp.bed  gigatest-tra.agp  gigatest-tra.fw.links  gigatest-tra.karyotype  gigatest-tra.links.final  gigatest-tra.rv.links  gigatest-tra.seqOrder.txt  gigatest-tra_reference.karyotype  test-tra-agp.bed  test-tra.agp  test-tra.fw.links  test-tra.karyotype  test-tra.links.final  test-tra.seqOrder.txt  test-tra_reference.fa  test-tra_scaffolds.fa
