[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inSVert"
version = "0.0.0"
description = "Structural Variant Simulation & Insertion Toolkit"
authors = [{name = "Thomas Di Marzo"}]
dependencies = [
    "pysam",
    "numpy",
    "pyyaml",
    "scipy",
    "rich-click",
    "rich"
]
requires-python = ">=3.7"

[project.scripts]
inSVert = "inSVert.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["inSVert*"]